input: Process key repeat before A11yKeyboardMonitor

Currently we process A11yKeyboardMonitor before any of the
input filters/spies.

This means that when A11yKeyboardMonitor grabs any key the repeat
timer won't trigger for that key, resulting in missing repeat
events.

To avoid this process KeyboardRepeat first

BUG: 519143