src/keyboard_input.h
@@ -37,6 +37,7 @@ class InputRedirection;
 class KeyboardLayout;
 class ModifiersChangedSpy;
 class Xkb;
+class KeyboardRepeat;
 
 class KWIN_EXPORT KeyboardInputRedirection : public QObject
 {
@@ -88,6 +89,7 @@ private:
     QList<uint32_t> m_pressedKeys;
     QList<uint32_t> m_filteredKeys;
     A11yKeyboardMonitor m_a11yKeyboardMonitor;
+    KeyboardRepeat *m_keyRepeatSpy;
 };
 
 }
